CRUD without edit

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -24,17 +24,20 @@
 
 {{#if user}}
     <ul class="nav-list">
+      <li class="nav-item"><a class="nav-link" href="/jurisprudence-all">All</a></li>
       <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
       <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-      <li class="nav-item"><a class="nav-link" href="/jurisprudence-add">Add decision</a></li>
+      <li class="nav-item"><a class="nav-link" href="/jurisprudence-add">Add</a></li>
+      <li class="nav-item"><a class="nav-link" href="/jurisprudence-edit">Edit</a></li>
 
     </ul>
 
   {{else}}
   <ul class="nav-list">
+      <li class="nav-item"><a class="nav-link" href="/jurisprudence-all">All</a></li>
       <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
       <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-      <li class="nav-item"><a class="nav-link" href="/signup">Sign up</a></li>
+      <li class="nav-item"><a class="nav-link" href="/signup">Signup</a></li>
     </ul>
 
 
