--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -6,7 +6,7 @@
   padding-top: 100px;
 }
 
-input[type="text"], input[type="email"], input[type="password"] input[type="date"]{
+input[type="text"], input[type="email"], input[type="password"] {
   font-family: 'Courier New', 'Courier', monospace;
   background-color: #eceff1;
   border: 3px solid #ddd;
@@ -23,10 +23,10 @@ input[type="text"], input[type="email"], input[type="password"] input[type="date
   margin-top: 10pt;
   color: #333;
 }
-input[type="text"]::-webkit-input-placeholder, input[type="email"]::-webkit-input-placeholder, input[type="password"]::-webkit-input-placeholder, input[type="date"]::-webkit-input-placeholder {
+input[type="text"]::-webkit-input-placeholder, input[type="email"]::-webkit-input-placeholder, input[type="password"]::-webkit-input-placeholder {
   color: #ddd;
 }
-input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus, input[type="date"]:focus {
+input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus {
   border: 3px solid #333;
 }
 select {
