--- a/public/stylesheets/search.css
+++ b/public/stylesheets/search.css
@@ -11,7 +11,7 @@
   position: relative;
 }
 
-/* .search-container:hover input {
+.search-container:hover input {
   width: 200px;
   padding: 0 36px 0 8px;
 }
@@ -21,7 +21,7 @@
   height: 35px;
   border: 0;
   transition: all 0.3s;
-} */
+}
 
 .search-img {
   width: 35px;
