--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -2,7 +2,7 @@
 
   <div class="title">
 
-    <a class="title-link" href="/about">TERRA LABORIS</a>
+    <a class="title-link" href="/about"> <span class="capital-letter">T</span>ERRA <span class="capital-letter">L</span>ABORIS</a>
     <p class="text">Recherche jurisprudencielles</p>
   </div>
 
