--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -59,7 +59,7 @@ select:focus {
   color: #333;
   background-image: url(https://i.postimg.cc/284xSFd5/arrow-black.png);
 }
-input[type="submit"] {
+.submit, input[type="submit"] {
   font-family: Helvecia, Arial, sans-serif;
   font-size: 14px;
   letter-spacing: 1.5pt;
@@ -77,7 +77,7 @@ input[type="submit"] {
   transition: 0.2s ease-in-out;
   cursor: pointer;
 }
-input[type="submit"]:hover {
+.submit:hover, input[type="submit"]:hover {
   opacity: 0.8;
   transform: translate(-50%, -10%);
 }
@@ -98,4 +98,23 @@ input[type="submit"]:hover {
 
 .account-message a:hover {
 text-decoration: underline;
+}
+
+.field-input, input[type="date"] {
+  font-family: 'Courier New', 'Courier', monospace;
+  background-color: #eceff1;
+  border: 3px solid #ddd;
+  border-radius: 20pt;
+  width: auto;
+  margin: 0;
+  padding-left: 15pt;
+  padding-right: 15pt;
+  font-size: 15px;
+  height: 30pt;
+  outline: none;
+  transition: 0.2s ease-in-out;
+  margin-bottom: 10pt;
+  margin-top: 10pt;
+  color: #333;
+
 }
