--- a/views/jurisprudence/jurisprudence-edit.hbs
+++ b/views/jurisprudence/jurisprudence-edit.hbs
@@ -1,14 +1,13 @@
 
 <div class="signin">
-  <form class="wrapper" action="/jurisprudence-add" method="POST" id="form">
+  <form class="wrapper" action="/jurisprudence-editS" method="POST" id="form">
     <p> Hello {{user.username}}, wanna edit the jurisprudence to the database?</p>
     <h2>Modify the content of a decision</h2>
     <input type="text" placeholder="{{jurisprudence.author}}" name="author">
     <input type="text" placeholder="{{jurisprudence.content}}" name="content">
     <input type="date" placeholder="{{jurisprudence.date}}" name="date">
+    <br>
     <input type="submit">
   </form>
-    <a href="/jurisprudence-single/{{id}}">Check decision</a> 
-    <a href="/jurisprudence-delete/{{jurisprudence._id}}">DELETE</a>
-  </div>
+
 </div>
