--- a/views/jurisprudence/jurisprudence-edit.hbs
+++ b/views/jurisprudence/jurisprudence-edit.hbs
@@ -1,6 +1,6 @@
 
 <div class="signin">
-  <form class="wrapper" action="/jurisprudence-editS" method="POST" id="form">
+  <form class="wrapper" action="/jurisprudence-edit/{{jurisprudence.id}}" method="POST" id="form">
     <p> Hello {{user.username}}, wanna edit the jurisprudence to the database?</p>
     <h2>Modify the content of a decision</h2>
     <input type="text" placeholder="{{jurisprudence.author}}" name="author">
