--- a/views/jurisprudence/jurisprudence-add.hbs
+++ b/views/jurisprudence/jurisprudence-add.hbs
@@ -9,7 +9,7 @@
     <div class="file-upload">
       <div class="file-select">
         <div class="file-select-button" id="fileName">Choose File</div>
-        <div class="file-select-name" id="noFile">No file chosen...</div> 
+        <div class="file-select-name" id="noFile">{{jurisprudence.path}}</div> 
         <input type="file" name="upload" id="chooseFile">
       </div>
     </div>
