--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,5 +15,7 @@
 
   <script src="/javascripts/navbar.js"> </script>
   <script src="/javascripts/script.js"></script>
+  <script src="/javascripts/jurisprudence-all.js"></script>
+
 </body>
 </html>
