--- a/views/jurisprudence/jurisprudence-all.hbs
+++ b/views/jurisprudence/jurisprudence-all.hbs
@@ -2,18 +2,22 @@
 <div class="signin">
   <h1 class="wrapper">All Jurisprudence</h1>
 </div>
+
+<div class="decision-wrapper">
     {{#each jurisprudence}}
       <div class="all-decision">
-          <p><span>Author:</span>{{this.author}}</p> 
-          <p><span>Content:</span>{{this.content}}</p>
+          <p>{{this.content}}</p>
+          <p class="author">{{this.author}}</p> 
+
         <div class="flex-container">
           <a class="flex-item" href="/jurisprudence-single/{{id}}"><img class="pdf-sizing" src="images/expand-button.png" alt="{{this.path}}"></a> 
-          <a class="flex-item" href="/jurisprudence-single/{{id}}"><img class="pdf-sizing" src="images/pdf.png" alt="{{this.path}}"></a> 
+          <a class="flex-item" href="/jurisprudence-single/{{id}}"><img class="pdf-sizing" src="images/pdfIcone.png" alt="{{this.path}}"></a> 
           <a title="Button fade blue/green" class="button btnFade btnBlueGreen"href="/jurisprudence-edit/{{id}}">EDIT</a>
           <a title="Button fade blue/green" class="button btnFade btnRed" href="/jurisprudence-delete/{{this._id}}">DELETE</a>  
         </div>      
       </div> 
     {{/each}}
+</div>
 </div>
 
 
