--- a/views/jurisprudence/jurisprudence-all.hbs
+++ b/views/jurisprudence/jurisprudence-all.hbs
@@ -8,6 +8,7 @@
       <div class="all-decision">
           <p>{{this.content}}</p>
           <p class="author">{{this.author}}</p> 
+          <p>{{this.parsedDate}}</p> 
 
         <div class="flex-container">
           <a class="flex-item" href="/jurisprudence-single/{{id}}"><img class="pdf-sizing" src="images/expand-button.png" alt="{{this.path}}"></a> 
