How to upload file

--- a/views/jurisprudence/jurisprudence-add.hbs
+++ b/views/jurisprudence/jurisprudence-add.hbs
@@ -17,6 +17,4 @@
     <button class="submit" type="submit">Add jurisprudence</button>
     </form>
 </div>
-  
-
-</div>
+  <script src="/javascripts/jurisprudence-all.js"></script>
