--- a/views/jurisprudence/jurisprudence-all.hbs
+++ b/views/jurisprudence/jurisprudence-all.hbs
@@ -12,7 +12,7 @@
 
         <div class="flex-container">
           <a class="flex-item" href="/jurisprudence-single/{{id}}"><img class="pdf-sizing" src="images/expand-button.png" alt="{{this.path}}"></a> 
-          <a class="flex-item" href="/jurisprudence-single/{{id}}"><img class="pdf-sizing" src="images/pdfIcone.png" alt="{{this.path}}"></a> 
+          <a class="flex-item" href="/jurisprudence-downloadpdf/{{id}}"><img class="pdf-sizing" src="images/pdfIcone.png" alt="{{this.path}}"></a> 
           <a title="Button fade blue/green" class="button btnFade btnBlueGreen"href="/jurisprudence-edit/{{id}}">EDIT</a>
           <a title="Button fade blue/green" class="button btnFade btnRed" href="/jurisprudence-delete/{{this._id}}">DELETE</a>  
         </div>      
