--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,10 +12,10 @@
   {{>navbar}}
 
   {{{body}}}
-
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
   <script src="/javascripts/navbar.js"> </script>
   <script src="/javascripts/script.js"></script>
-  <script src="/javascripts/jurisprudence-all.js"></script>
-
 </body>
 </html>
